files/07-deployment_liveness_probe.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-demo-deployment
  labels:
    app: flask-demo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-demo
  template:
    metadata:
      labels:
        app: flask-demo
    spec:
      containers:
      - name: flask-demo-container
        image: markbenschop/flask-demo:0.16
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          timeoutSeconds: 5
      restartPolicy: Always
