files/05-nodeport_serverice.yml
---
kind: Service
apiVersion: v1
metadata:
  name: flask-demo-external-service
spec:
   selector:
     app: flask-demo
   ports:
     - protocol: TCP
       port: 5000
       nodePort: 30090  # Choose unique port here
   type: NodePort
