files/04-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-flask-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: mark.debian
      http:
        paths:
          - path: /
            backend:
              serviceName: flask-demo-service
              servicePort: flask
